# router.go
@@ -28,9 +28,9 @@ func router() *echo.Echo {
 	auth.Use(lib.AuthenticationMiddleware)
 
 	// Post
-	auth.GET("/posts/:field/:key", controllers.GetCmsPostList).Name = "GetCmsPostList"
-	auth.GET("/posts/:key", controllers.GetCmsPostData).Name = "GetCmsPost"
-	auth.GET("/posttype", controllers.GetCmsPostTypeList).Name = "GetCmsPostTypeList"
+	e.GET("/posts/:field/:key", controllers.GetCmsPostList).Name = "GetCmsPostList"
+	e.GET("/posts/:key", controllers.GetCmsPostData).Name = "GetCmsPost"
+	e.GET("/posttype", controllers.GetCmsPostTypeList).Name = "GetCmsPostTypeList"
 
 	// Fund Type
 	auth.GET("/fundtype", controllers.GetMsFundTypeList).Name = "GetMsFundTypeList"
